[package]
name = "prediction"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
num-traits = "0.2"
num-derive = "0.3"
pyth-sdk-solana = "0.4.1"
chainlink_solana = "1.0.0"
