[package]
name = "prediction_game_v1"
version = "1.0.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_game_v1"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
num-traits = "0.2"
num-derive = "0.3"
pyth-sdk-solana = "0.4.1"
chainlink_solana = "1.0.0"
bytemuck = "1.9.1"
switchboard-v2 = "0.1.10"
num_enum = "0.5.7"
